--- a/index.html
+++ b/index.html
@@ -72,69 +72,69 @@
         <div class="w3-cell-row">
                 <h4>Start: Assign Bibs to Lanes</h4>
                 <div class="dropdown">
-                    <button id="buttonLane1" class="dropbtnLane1">Lane 1</button>
+                    <button id="buttonLane1" class="dropbtnLane">Lane 1</button>
                     <div class="dropdown-content">
-                        <a class="redBib" onclick="updateLaneColor('Start', 'buttonLane1','Red');">Red</a>
-                        <a class="greenBib" onclick="updateLaneColor('Start', 'buttonLane1','Green');">Green</a>
-                        <a class="blueBib" onclick="updateLaneColor('Start', 'buttonLane1','Blue');">Blue</a>
-                        <a class="yellowBib" onclick="updateLaneColor('Start', 'buttonLane1','Yellow');">Yellow</a>
-                        <a class="blackBib" onclick="updateLaneColor('Start', 'buttonLane1','Black');">Black</a>
-                        <a class="whiteBib" onclick="updateLaneColor('Start', 'buttonLane1','White');">White</a>
+                        <a class="redBib" onclick="updateLaneColor(start, 'buttonLane1','Red');">Red</a>
+                        <a class="greenBib" onclick="updateLaneColor(start, 'buttonLane1','Green');">Green</a>
+                        <a class="blueBib" onclick="updateLaneColor(start, 'buttonLane1','Blue');">Blue</a>
+                        <a class="yellowBib" onclick="updateLaneColor(start, 'buttonLane1','Yellow');">Yellow</a>
+                        <a class="blackBib" onclick="updateLaneColor(start, 'buttonLane1','Black');">Black</a>
+                        <a class="whiteBib" onclick="updateLaneColor(start, 'buttonLane1','White');">White</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button id="buttonLane2" class="dropbtnLane2">Lane 2</button>
+                    <button id="buttonLane2" class="dropbtnLane">Lane 2</button>
                     <div class="dropdown-content">
-                        <a class="redBib" onclick="updateLaneColor('Start', 'buttonLane2','Red');">Red</a>
-                        <a class="greenBib" onclick="updateLaneColor('Start', 'buttonLane2','Green');">Green</a>
-                        <a class="blueBib" onclick="updateLaneColor('Start', 'buttonLane2','Blue');">Blue</a>
-                        <a class="yellowBib" onclick="updateLaneColor('Start', 'buttonLane2','Yellow');">Yellow</a>
-                        <a class="blackBib" onclick="updateLaneColor('Start', 'buttonLane2','Black');">Black</a>
-                        <a class="whiteBib" onclick="updateLaneColor('Start', 'buttonLane2','White');">White</a>
+                        <a class="redBib" onclick="updateLaneColor(start, 'buttonLane2','Red');">Red</a>
+                        <a class="greenBib" onclick="updateLaneColor(start, 'buttonLane2','Green');">Green</a>
+                        <a class="blueBib" onclick="updateLaneColor(start, 'buttonLane2','Blue');">Blue</a>
+                        <a class="yellowBib" onclick="updateLaneColor(start, 'buttonLane2','Yellow');">Yellow</a>
+                        <a class="blackBib" onclick="updateLaneColor(start, 'buttonLane2','Black');">Black</a>
+                        <a class="whiteBib" onclick="updateLaneColor(start, 'buttonLane2','White');">White</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button id="buttonLane3" class="dropbtnLane3">Lane 3</button>
+                    <button id="buttonLane3" class="dropbtnLane">Lane 3</button>
                     <div class="dropdown-content">
-                        <a class="redBib" onclick="updateLaneColor('Start', 'buttonLane3','Red');">Red</a>
-                        <a class="greenBib" onclick="updateLaneColor('Start', 'buttonLane3','Green');">Green</a>
-                        <a class="blueBib" onclick="updateLaneColor('Start', 'buttonLane3','Blue');">Blue</a>
-                        <a class="yellowBib" onclick="updateLaneColor('Start', 'buttonLane3','Yellow');">Yellow</a>
-                        <a class="blackBib" onclick="updateLaneColor('Start', 'buttonLane3','Black');">Black</a>
-                        <a class="whiteBib" onclick="updateLaneColor('Start', 'buttonLane3','White');">White</a>
+                        <a class="redBib" onclick="updateLaneColor(start, 'buttonLane3','Red');">Red</a>
+                        <a class="greenBib" onclick="updateLaneColor(start, 'buttonLane3','Green');">Green</a>
+                        <a class="blueBib" onclick="updateLaneColor(start, 'buttonLane3','Blue');">Blue</a>
+                        <a class="yellowBib" onclick="updateLaneColor(start, 'buttonLane3','Yellow');">Yellow</a>
+                        <a class="blackBib" onclick="updateLaneColor(start, 'buttonLane3','Black');">Black</a>
+                        <a class="whiteBib" onclick="updateLaneColor(start, 'buttonLane3','White');">White</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button id="buttonLane4" class="dropbtnLane1">Lane 1</button>
+                    <button id="buttonLane4" class="dropbtnLane">Lane 4</button>
                     <div class="dropdown-content">
-                        <a class="redBib" onclick="updateLaneColor('Start', 'buttonLane4','Red');">Red</a>
-                        <a class="greenBib" onclick="updateLaneColor('Start', 'buttonLane4','Green');">Green</a>
-                        <a class="blueBib" onclick="updateLaneColor('Start', 'buttonLane4','Blue');">Blue</a>
-                        <a class="yellowBib" onclick="updateLaneColor('Start', 'buttonLane4','Yellow');">Yellow</a>
-                        <a class="blackBib" onclick="updateLaneColor('Start', 'buttonLane4','Black');">Black</a>
-                        <a class="whiteBib" onclick="updateLaneColor('Start', 'buttonLane4','White');">White</a>
+                        <a class="redBib" onclick="updateLaneColor(start, 'buttonLane4','Red');">Red</a>
+                        <a class="greenBib" onclick="updateLaneColor(start, 'buttonLane4','Green');">Green</a>
+                        <a class="blueBib" onclick="updateLaneColor(start, 'buttonLane4','Blue');">Blue</a>
+                        <a class="yellowBib" onclick="updateLaneColor(start, 'buttonLane4','Yellow');">Yellow</a>
+                        <a class="blackBib" onclick="updateLaneColor(start, 'buttonLane4','Black');">Black</a>
+                        <a class="whiteBib" onclick="updateLaneColor(start, 'buttonLane4','White');">White</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button id="buttonLane5" class="dropbtnLane5">Lane 5</button>
+                    <button id="buttonLane5" class="dropbtnLane">Lane 5</button>
                     <div class="dropdown-content">
-                        <a class="redBib" onclick="updateLaneColor('Start', 'buttonLane5','Red');">Red</a>
-                        <a class="greenBib" onclick="updateLaneColor('Start', 'buttonLane5','Green');">Green</a>
-                        <a class="blueBib" onclick="updateLaneColor('Start', 'buttonLane5','Blue');">Blue</a>
-                        <a class="yellowBib" onclick="updateLaneColor('Start', 'buttonLane5','Yellow');">Yellow</a>
-                        <a class="blackBib" onclick="updateLaneColor('Start', 'buttonLane5','Black');">Black</a>
-                        <a class="whiteBib" onclick="updateLaneColor('Start', 'buttonLane5','White');">White</a>
+                        <a class="redBib" onclick="updateLaneColor(start, 'buttonLane5','Red');">Red</a>
+                        <a class="greenBib" onclick="updateLaneColor(start, 'buttonLane5','Green');">Green</a>
+                        <a class="blueBib" onclick="updateLaneColor(start, 'buttonLane5','Blue');">Blue</a>
+                        <a class="yellowBib" onclick="updateLaneColor(start, 'buttonLane5','Yellow');">Yellow</a>
+                        <a class="blackBib" onclick="updateLaneColor(start, 'buttonLane5','Black');">Black</a>
+                        <a class="whiteBib" onclick="updateLaneColor(start, 'buttonLane5','White');">White</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button id="buttonLane6" class="dropbtnLane6">Lane 6</button>
+                    <button id="buttonLane6" class="dropbtnLane">Lane 6</button>
                     <div class="dropdown-content">
-                        <a class="redBib" onclick="updateLaneColor('Start', 'buttonLane6','Red');">Red</a>
-                        <a class="greenBib" onclick="updateLaneColor('Start', 'buttonLane6','Green');">Green</a>
-                        <a class="blueBib" onclick="updateLaneColor('Start', 'buttonLane6','Blue');">Blue</a>
-                        <a class="yellowBib" onclick="updateLaneColor('Start', 'buttonLane6','Yellow');">Yellow</a>
-                        <a class="blackBib" onclick="updateLaneColor('Start', 'buttonLane6','Black');">Black</a>
-                        <a class="whiteBib" onclick="updateLaneColor('Start', 'buttonLane6','White');">White</a>
+                        <a class="redBib" onclick="updateLaneColor(start, 'buttonLane6','Red');">Red</a>
+                        <a class="greenBib" onclick="updateLaneColor(start, 'buttonLane6','Green');">Green</a>
+                        <a class="blueBib" onclick="updateLaneColor(start, 'buttonLane6','Blue');">Blue</a>
+                        <a class="yellowBib" onclick="updateLaneColor(start, 'buttonLane6','Yellow');">Yellow</a>
+                        <a class="blackBib" onclick="updateLaneColor(start, 'buttonLane6','Black');">Black</a>
+                        <a class="whiteBib" onclick="updateLaneColor(start, 'buttonLane6','White');">White</a>
                     </div>
                 </div>
         </div>  
