added submit data functions

--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
                 </div>
             </div>
             <br>
-            <div class="w3-light-grey">
+            <!-- <div class="w3-light-grey">
                     <div id = "progressBar" class="w3-container w3-blue" style="width:0%; background-color: green"></div>
-            </div>
+            </div> -->
             <br>
             <div>
                     <input type="button" class="w3-button w3-black  w3-border" value="Save" onclick="saveStartData()" id="saveStartButton">
@@ -414,7 +414,7 @@
 
 <div class="w3-container" id="dashboardContainer">
         <div >
-                <iframe width="800" height="600" src="http://sbxdashboard.azurewebsites.net" frameborder="0" allowFullScreen="true"></iframe>
+                <iframe width="400" height="300" src="http://sbxdashboard.azurewebsites.net" frameborder="0" allowFullScreen="true"></iframe>
          </div> 
 </div>
 
@@ -433,8 +433,6 @@
 
 <script src="postStatusUpdate.js"></script>
 <script src="containerDisplay.js"></script>
-<script src="updateElapsedTime.js"></script>
-<script src="controller.js"></script>
 <script src="buttonHandler.js"></script>
 <script src="initializeDataStructures.js"></script>
 <script>
