resolved hole bug

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <hole id="hole6thPlace" class="dropbtnLane">6th Place</button>
+            <button id="hole6thPlace" class="dropbtnLane">6th Place</button>
             <div class="dropdown-content">
                 <a class="redBib" onclick="updateLaneColor(hole, 'hole6thPlace','Red');">Red</a>
                 <a class="greenBib" onclick="updateLaneColor(hole, 'hole6thPlace','Green');">Green</a>
@@ -250,13 +250,13 @@
                 <a class="whiteBib" onclick="updateLaneColor(hole, 'hole6thPlace','White');">White</a>
             </div>
         </div>
-    </div>
-        <br>
-
-        <div>
-                <input type="button" class="w3-button w3-black  w3-border" value="Save" onclick="saveHoleData()" id="saveHoleButton">
-        </div>
 </div>
+<br>
+<div>
+        <input type="button" class="w3-button w3-black  w3-border" value="Save" onclick="saveHoleData()" id="saveHoleButton">
+</div>
+</div>
+
 <!-- Buttons to assign Colors to place at Split #1 -->
 <div class="w3-container" id="split1Container">
         <div class="w3-cell-row">
